Fix cart drawer not showing on mobile

--- a/src/components/CartDrawer.module.css
+++ b/src/components/CartDrawer.module.css
@@ -31,7 +31,7 @@
   flex-direction: column;
 }
 
-.drawerOpen {
+.drawer.drawerOpen {
   right: 0;
 }
 
